--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-Hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TOUCH</title>
+</head>
+<body>    
+    <table>
+    <TR><TH>AD:</TH><td>Furkan</td>
+    <TR><TH>SOYAD:</TH><TD>Taç</TD>
+    <TR><TH>OKUL:</TH><TD>Mimar Sinan Güzel Sanatlar Üniversitesi</TD>
+    </TR>
+    </table>
+    <br><br><br><br>
+    <table>
+        <tr><th>Çalışmalar:</th></tr>
+    </table>     
+        
+
+
+     
+</body>
+</html>
